@startuml
'https://plantuml.com/class-diagram
'skinparam linetype ortho
title Officer Filing API\nClass Structure Diagram
package "uk.gov.companieshouse.pscfiling.api" {
        package "controller" {
            interface FilingDataController
            interface PscFilingController
            interface ValidationStatusController
            FilingDataController <|-- FilingDataControllerImpl
            PscFilingController <|-- PscFilingControllerImpl
            ValidationStatusController <|-- ValidationStatusControllerImpl
        }
    package "repository" {
        interface MongoRepository
        interface PscFilingRepository
        MongoRepository <|-- PscFilingRepository
    }
    package "utils" {
                class LogHelper
                class MapHelper
    }
    package "service" {
        interface ApiClientService
        interface FilingDataService
        interface PscFilingService
        interface TransactionService
        ApiClientService <|-- ApiClientServiceImpl
        FilingDataService <|-- FilingDataServiceImpl
        FilingDataServiceImpl o-- PscFilingService
        PscFilingService <|-PscFilingServiceImpl
        TransactionService <|-- TransactionServiceImpl
        TransactionServiceImpl o-- ApiClientService
        PscFilingControllerImpl o-- TransactionService
        PscFilingControllerImpl o-- PscFilingService
        ValidationStatusControllerImpl o-- PscFilingService
        FilingDataControllerImpl o-- FilingDataService
        PscFilingServiceImpl o-- PscFilingRepository
    }
    package "model" {
        package "dto"{
           PscFilingDto o-- AddressDto : address
            PscFilingDto o-- AddressDto : residentialAddress
            PscFilingDto o-- Date3TupleDto
            PscFilingDto "1" o-- "*" FormerNamesDto
            PscFilingDto o-- IdentificationDto
        }
        package "entity" {
            PscFiling o-- Address : address
            PscFiling o-- Address : residentialAddress
            PscFiling o-- Date3Tuple
            PscFiling "1" o-- "*" FormerNames
            PscFiling o-- Identification
        }
        package "filing" {
            class FilingData
        }
        package "mapper" {
            interface PscFilingMapper
            class PscFilingMapperImpl <<generated>>
           PscFilingMapper <|-- PscFilingMapperImpl
            PscFilingControllerImpl o-- PscFilingMapper
            FilingDataServiceImpl o-- PscFilingMapper
        }
    }
package "exception" {
    exception InvalidFilingException
    exception NotImplementedException
    exception ResourceNotFoundException
    exception TransactionServiceException
}
package "error" {
    ApiErrors "1" *-- "*" ApiError
    together {
        enum ErrorType
        enum LocationType
    }
    class RestExceptionHandler
}
@enduml